test-cases/final-dump/foreign_def_errors.wybe
def foreign c untyped(p, q:int)
def foreign c {resource} bad_mods()

pass 
